--- a/app/src/main/res/layout/interface4.xml
+++ b/app/src/main/res/layout/interface4.xml
@@ -9,25 +9,26 @@
 
     <!-- Header with custom curved background -->
     <LinearLayout
-        android:id="@+id/header"
-        android:layout_width="0dp"
+        android:id="@+id/linearLayout3"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginHorizontal="16dp"
-        android:background="#673AB7"
+        android:background="@android:drawable/dialog_holo_dark_frame"
         android:gravity="center"
-        android:paddingVertical="24dp"
+        android:padding="16dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
         <TextView
-            android:layout_width="96dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Battle"
+            android:text="BATTLE"
             android:textColor="@android:color/white"
-            android:textSize="32sp"
+            android:textSize="24sp"
             android:textStyle="bold" />
     </LinearLayout>
+
+
 
     <!-- Battle Area -->
 
@@ -38,10 +39,10 @@
         android:paddingHorizontal="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.166"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/header"
-        app:layout_constraintVertical_bias="0.0"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
+        app:layout_constraintVertical_bias="0.017"
         app:layout_constraintVertical_weight="1">
 
         <!-- First Card -->
@@ -209,12 +210,13 @@
 
     <TextView
         android:id="@+id/textView"
-        android:layout_width="415dp"
-        android:layout_height="135dp"
-        android:layout_marginTop="104dp"
+        android:layout_width="410dp"
+        android:layout_height="131dp"
+        android:layout_marginTop="96dp"
         android:background="@color/white"
         android:text="Battle logs"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />
 
@@ -223,6 +225,7 @@
         android:layout_width="144dp"
         android:layout_height="54dp"
         android:layout_marginStart="36dp"
+        android:layout_marginTop="10dp"
         android:text="Next Attack"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -233,7 +236,7 @@
         android:id="@+id/button2"
         android:layout_width="138dp"
         android:layout_height="52dp"
-        android:layout_marginTop="4dp"
+        android:layout_marginTop="10dp"
         android:text="End Battle"
         android:textColorLink="#673AB7"
         app:layout_constraintEnd_toEndOf="parent"
@@ -245,11 +248,11 @@
         android:id="@+id/button3"
         android:layout_width="165dp"
         android:layout_height="49dp"
+        android:layout_marginBottom="24dp"
         android:text="Lutemon Home"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.457"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="667dp" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/textView2"
