--- a/app/src/main/res/layout/statistics.xml
+++ b/app/src/main/res/layout/statistics.xml
@@ -77,6 +77,7 @@
         android:layout_marginEnd="3dp"
         android:lineSpacingExtra="8sp"
         android:text="View Charts"
+        android:textColorLink="#E91E63"
         android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
