--- a/app/src/main/res/layout/item_lutemon.xml
+++ b/app/src/main/res/layout/item_lutemon.xml
@@ -40,13 +40,11 @@
                 android:layout_height="77dp"
                 android:layout_marginStart="26dp"
                 android:layout_marginTop="12dp"
-                android:layout_marginEnd="16dp"
                 android:layout_marginBottom="20dp"
                 android:text="Lutemon name"
                 android:textSize="24sp"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toTopOf="@+id/textView11"
-                app:layout_constraintEnd_toStartOf="@+id/button6"
                 app:layout_constraintStart_toEndOf="@+id/imageView2"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintVertical_bias="1.0" />
@@ -65,18 +63,18 @@
                 app:layout_constraintStart_toEndOf="@+id/imageView2"
                 app:layout_constraintTop_toBottomOf="@+id/textView10" />
 
-            <Button
-                android:id="@+id/button6"
-                android:layout_width="53dp"
-                android:layout_height="54dp"
-                android:layout_marginTop="12dp"
-                android:layout_marginEnd="4dp"
-                android:layout_marginBottom="142dp"
-                android:background="#615858"
+            <CheckBox
+                android:id="@+id/checkBox"
+                android:layout_width="97dp"
+                android:layout_height="81dp"
+                android:layout_marginStart="3dp"
+                android:layout_marginTop="16dp"
+                android:layout_marginBottom="131dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                tools:text="c" />
+                app:layout_constraintStart_toEndOf="@+id/textView10"
+                app:layout_constraintTop_toTopOf="parent" />
+
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
 </androidx.constraintlayout.widget.ConstraintLayout>
