--- a/app/src/main/res/layout/battle_arena.xml
+++ b/app/src/main/res/layout/battle_arena.xml
@@ -156,11 +156,14 @@
             android:id="@+id/textView2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="65dp"
             android:layout_marginTop="40dp"
+            android:layout_marginEnd="65dp"
             android:text="VS"
             android:textAppearance="@style/TextAppearance.AppCompat.Large"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:layout_editor_absoluteX="191dp" />
+            app:layout_constraintEnd_toStartOf="@+id/imageView8"
+            app:layout_constraintStart_toEndOf="@+id/imageView7"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <ImageView
             android:id="@+id/imageView7"
