--- a/app/src/main/res/layout/item_lutemon.xml
+++ b/app/src/main/res/layout/item_lutemon.xml
@@ -28,14 +28,14 @@
                 android:layout_height="103dp"
                 android:layout_marginStart="11dp"
                 android:layout_marginTop="40dp"
-                app:layout_constraintEnd_toStartOf="@+id/textView10"
+                app:layout_constraintEnd_toStartOf="@+id/name_lutemon"
                 app:layout_constraintHorizontal_bias="0.161"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:srcCompat="@android:drawable/ic_notification_overlay" />
 
             <TextView
-                android:id="@+id/textView10"
+                android:id="@+id/name_lutemon"
                 android:layout_width="181dp"
                 android:layout_height="77dp"
                 android:layout_marginStart="26dp"
@@ -44,13 +44,13 @@
                 android:text="Lutemon name"
                 android:textSize="24sp"
                 android:textStyle="bold"
-                app:layout_constraintBottom_toTopOf="@+id/textView11"
+                app:layout_constraintBottom_toTopOf="@+id/lutemon_details"
                 app:layout_constraintStart_toEndOf="@+id/imageView2"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintVertical_bias="1.0" />
 
             <TextView
-                android:id="@+id/textView11"
+                android:id="@+id/lutemon_details"
                 android:layout_width="181dp"
                 android:layout_height="77dp"
                 android:layout_marginTop="24dp"
@@ -61,7 +61,7 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.757"
                 app:layout_constraintStart_toEndOf="@+id/imageView2"
-                app:layout_constraintTop_toBottomOf="@+id/textView10" />
+                app:layout_constraintTop_toBottomOf="@+id/name_lutemon" />
 
             <CheckBox
                 android:id="@+id/checkBox"
@@ -72,7 +72,7 @@
                 android:layout_marginBottom="131dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/textView10"
+                app:layout_constraintStart_toEndOf="@+id/name_lutemon"
                 app:layout_constraintTop_toTopOf="parent" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
