--- a/app/src/main/res/layout/training_area_lutemon.xml
+++ b/app/src/main/res/layout/training_area_lutemon.xml
@@ -81,18 +81,18 @@
     </androidx.cardview.widget.CardView>
 
     <Button
-        android:id="@+id/button8"
+        android:id="@+id/btnTrain"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="39dp"
         android:layout_marginBottom="48dp"
         android:text="Train"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/button9"
+        app:layout_constraintEnd_toStartOf="@+id/btnGoToHome"
         app:layout_constraintStart_toStartOf="parent" />
 
     <Button
-        android:id="@+id/button9"
+        android:id="@+id/btnGoToHome"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="75dp"
@@ -101,8 +101,8 @@
         android:text="Go to Home"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toEndOf="@+id/button8" />
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toEndOf="@+id/btnGoToHome" />
 
     <!-- Button Bar -->
 
