--- a/app/src/main/res/layout/lutemon_home.xml
+++ b/app/src/main/res/layout/lutemon_home.xml
@@ -37,20 +37,20 @@
         app:layout_constraintTop_toBottomOf="@+id/textView7" />
 
     <Button
-        android:id="@+id/button4"
+        android:id="@+id/btnMoveToTraining"
         android:layout_width="190dp"
         android:layout_height="70dp"
         android:layout_marginTop="12dp"
         android:layout_marginBottom="9dp"
         android:text="Move to Training"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/button5"
+        app:layout_constraintEnd_toStartOf="@+id/btnMoveToBattle"
         app:layout_constraintHorizontal_bias="0.085"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/recyclerView" />
 
     <Button
-        android:id="@+id/button5"
+        android:id="@+id/btnMoveToBattle"
         android:layout_width="190dp"
         android:layout_height="70dp"
         android:layout_marginStart="14dp"
@@ -60,6 +60,6 @@
         android:text="Move to Battle"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/button4"
+        app:layout_constraintStart_toEndOf="@+id/btnMoveToTraining"
         app:layout_constraintTop_toBottomOf="@+id/recyclerView" />
 </androidx.constraintlayout.widget.ConstraintLayout>
