--- a/app/src/main/res/layout/create_new_lutemon.xml
+++ b/app/src/main/res/layout/create_new_lutemon.xml
@@ -67,13 +67,13 @@
             android:paddingLeft="16dp">
 
             <RadioButton
-                android:id="@+id/radioWhite"
+                android:id="@+id/radioRed"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="White (ATK: 5, DEF: 4, HP: 20)"
-                android:textColor="@android:color/black"
+                android:layout_marginLeft="8dp"
                 android:layout_marginBottom="8dp"
-                android:layout_marginLeft="8dp"/>
+                android:text="Red (ATK: 5, DEF: 4, HP: 20)"
+                android:textColor="@android:color/black" />
 
             <RadioButton
                 android:id="@+id/radioGreen"
