--- a/app/src/main/res/layout/training_area_lutemon.xml
+++ b/app/src/main/res/layout/training_area_lutemon.xml
@@ -6,15 +6,19 @@
     android:layout_height="match_parent">
 
     <!-- Header -->
+
+    <!-- Movable CardView -->
     <LinearLayout
         android:id="@+id/HeaderLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
         android:background="@android:drawable/dialog_holo_dark_frame"
         android:gravity="center"
         android:orientation="vertical"
         android:padding="16dp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
@@ -27,7 +31,6 @@
             android:textStyle="bold" />
     </LinearLayout>
 
-    <!-- Movable CardView -->
     <androidx.cardview.widget.CardView
         android:id="@+id/cardView"
         android:layout_width="0dp"
@@ -80,6 +83,9 @@
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
 
+
+
+
     <Button
         android:id="@+id/btnTrain"
         android:layout_width="wrap_content"
@@ -101,9 +107,67 @@
         android:text="Go to Home"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toEndOf="@+id/btnGoToHome" />
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toEndOf="@+id/btnTrain" />
 
-    <!-- Button Bar -->
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="117dp"
+        android:layout_height="116dp"
+        android:layout_marginStart="147dp"
+        android:layout_marginTop="112dp"
+        android:layout_marginEnd="147dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/cardView"
+        app:srcCompat="@android:drawable/btn_star_big_on" />
+
+    <ProgressBar
+        android:id="@+id/progressBar"
+        style="?android:attr/progressBarStyleLarge"
+        android:layout_width="281dp"
+        android:layout_height="291dp"
+        android:layout_centerInParent="true"
+        android:layout_marginStart="65dp"
+        android:layout_marginTop="26dp"
+        android:layout_marginEnd="65dp"
+        android:indeterminate="true"
+        android:indeterminateTint="@android:color/holo_blue_light"
+        android:visibility="invisible"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/cardView" />
+
+
+    <View
+        android:id="@+id/flashOverlay"
+        android:layout_width="281dp"
+        android:layout_height="291dp"
+        android:layout_centerInParent="true"
+        android:layout_marginTop="26dp"
+        android:background="@drawable/glow_circle"
+        android:visibility="invisible"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/cardView"/>
+
+    <TextView
+        android:id="@+id/textView10"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="42dp"
+        android:layout_marginEnd="96dp"
+        android:layout_marginBottom="424dp"
+        android:textColor="@android:color/white"
+        android:background="#AA000000"
+        android:visibility="gone"
+        android:text="LUTEMON TRAINING COMPLETED!!"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/cardView"
+        app:layout_constraintVertical_bias="1.0" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+
