class format change

--- a/app/src/main/res/layout/item_lutemon.xml
+++ b/app/src/main/res/layout/item_lutemon.xml
@@ -36,13 +36,13 @@
 
             <TextView
                 android:id="@+id/name_lutemon"
-                android:layout_width="181dp"
-                android:layout_height="77dp"
+                android:layout_width="185dp"
+                android:layout_height="35dp"
                 android:layout_marginStart="26dp"
                 android:layout_marginTop="12dp"
                 android:layout_marginBottom="20dp"
                 android:text="Lutemon name"
-                android:textSize="24sp"
+                android:textSize="20sp"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toTopOf="@+id/lutemon_details"
                 app:layout_constraintStart_toEndOf="@+id/imageView2"
@@ -53,11 +53,11 @@
                 android:id="@+id/lutemon_details"
                 android:layout_width="181dp"
                 android:layout_height="77dp"
-                android:layout_marginTop="24dp"
+                android:layout_marginTop="10dp"
                 android:layout_marginEnd="62dp"
                 android:text="Lutemon details"
-                android:textSize="24sp"
-                android:textStyle="bold"
+                android:textSize="16sp"
+                android:textStyle="italic"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.757"
                 app:layout_constraintStart_toEndOf="@+id/imageView2"
