added images in create_new_lutemon.xml file so the image of a lutemon appears in correspondence with button clicked by the user

--- a/app/src/main/res/layout/create_new_lutemon.xml
+++ b/app/src/main/res/layout/create_new_lutemon.xml
@@ -156,7 +156,7 @@
             android:textColor="@android:color/white"
             android:textStyle="bold" />
 
-        <!-- Small gray text at bottom -->
+        <!-- Small gray text at bottom :)-->
         <TextView
             android:id="@+id/create_lutemon_screen_text"
             android:layout_width="wrap_content"
