--- a/app/src/main/res/layout/training_area_lutemon.xml
+++ b/app/src/main/res/layout/training_area_lutemon.xml
@@ -163,10 +163,9 @@
         android:layout_marginTop="42dp"
         android:layout_marginEnd="96dp"
         android:layout_marginBottom="424dp"
-        android:textColor="@android:color/white"
-        android:background="#AA000000"
+        android:text="LUTEMON TRAINING COMPLETED!! +2 EXP"
+        android:textColor="@color/dark_blue"
         android:visibility="gone"
-        android:text="LUTEMON TRAINING COMPLETED!!"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/cardView"
