--- a/app/src/main/res/layout/lutemon_home.xml
+++ b/app/src/main/res/layout/lutemon_home.xml
@@ -13,7 +13,7 @@
         android:layout_marginTop="40dp"
         android:layout_marginEnd="1dp"
         android:layout_marginBottom="44dp"
-        android:background="#3051F6"
+        android:background="@android:drawable/dialog_holo_dark_frame"
         android:text="Lutemon Home"
         android:textAlignment="center"
         android:textColor="#FBFAFA"
